# ros_tape_follower

./: README.md
src/crawler_gazebo/: CMakeLists.txt  package.xml  setup.py
src/crawler_gazebo/launch/: crawler_gazebo.launch  keyboard_teleop.launch
src/crawler_gazebo/src/: keyboard_teleop_node.py
src/crawler_gazebo/urdf/: crawler_gazebo.urdf
src/crawler_gazebo/worlds/: line.world  line2.world
src/detectron2_ros/coco/annotations/: tape_train.json  tape_valid.json
src/detectron2_ros/detectron2/configs/: Base-RCNN-FPN.yaml
src/detectron2_ros/launch/: detectron2_ros.launch
src/detectron2_ros/output/: events.out.tfevents.1707326403.ws.146786.0  metrics.json  model_final.pth
src/detectron2_ros/output tape gazebo/: events.out.tfevents.1699615447.ws.4577.0  events.out.tfevents.1699616112.ws.8656.0  metrics.json  model_final.pth
src/detectron2_ros/src/: detectron2_ros
src/detectron2_ros/tape/: README.dataset.txt  README.roboflow.txt
src/detectron2_ros/tape-1/: README.dataset.txt  README.roboflow.txt
src/detectron2_ros/tape-1/train/: _annotations.coco.json
src/detectron2_ros/tape-1/valid/: _annotations.coco.json
src/detectron2_ros/tape/train/: _annotations.coco.json
src/detectron2_ros/tape/valid/: _annotations.coco.json
src/detectron2_ros/weld/train/: _annotations.coco.json
src/detectron2_ros/weld/valid/: _annotations.coco.json
